try and handle ropey social urls