@@ -7,6 +7,7 @@ import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
 import com.fasterxml.jackson.databind.node.ValueNode;
 
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -22,11 +23,22 @@ class URIDeserializer extends StdDeserializer<URI> {
     public URI deserialize(JsonParser jp, DeserializationContext ctxt) throws IOException {
         final ObjectMapper mapper = (ObjectMapper) jp.getCodec();
         final ValueNode vNode = mapper.readTree(jp);
+
+        URI uri = null;
         try {
-            final URL url = new URL(vNode.asText());
-            return new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(), url.getRef());
-        } catch (URISyntaxException e) {
-            throw new RuntimeException(e);
+            uri = new URI(vNode.asText());
+        } catch (URISyntaxException ignored) {
         }
+
+        if (uri == null) {
+            try {
+                final URL url = new URL(vNode.asText());
+                uri = new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(), url.getRef());
+            } catch (MalformedURLException ignored) {
+            } catch (URISyntaxException ignored) {
+            }
+        }
+
+        return uri;
     }
 }
